  * Removed some dead code (testing image->matte) in PNG64 encoder.

2014-07-07  6.8.9-6 Dirk Lemstra <dirk@snakeware...>
  * Added support for R5G6B5, RGB5A1 and RGBA4 dds files.

2014-07-01  6.8.9-6 Cristy  <quetzlzacatenango@image...>
  * Write LAB pixels as percentages in the TXT image format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25830).

2014-07-01  6.8.9-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-5, SVN revision 16123.

2014-06-28  6.8.9-5 Glenn Randers-Pehrson <glennrp@image...>
  * Do not let libpng16 check ICC/sRGB profiles in non-debug runs; we do
    it ourselves anyway.  Avoids emitting "known incorrect profile" warnings.
    For strict profile checking and warning, use "-debug coder".

2014-06-27  6.8.9-5 Dirk Lemstra <dirk@snakeware...>
  * Disabled OpenCL acceleration when image has a 'mask' or 'clip-mask'.

2014-06-25  6.8.9-5 Cristy  <quetzlzacatenango@image...>
  * Use -define profile:skip=icc, for example,  to skip color profiles on read.

2014-06-23  6.8.9-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-4, SVN revision 16057.

2014-06-15  6.8.9-4 Cristy  <quetzlzacatenango@image...>
  * Support RMS argument for -evaluate-sequence and -statistic options.
  * Fix lseek define for a successful compile under 64-bit MinGW.
  * Pipe image to display program no longer reports an exception (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23532).
  * Check that profile is non-NULL in coders/tiff.c (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25770).

2014-06-08  6.8.9-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-3, SVN revision 15975.

2014-06-07  6.8.9-3 Glenn Randers-Pehrson <glennrp@image...>
  * Quiet warning about unused variable "skip_to_iend" in coders/png.c.

2014-06-07  6.8.9-3 Dirk Lemstra <dirk@snakeware...>
  * Fixed creation of SVG from 8bim clip path. (reference 